--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -3638,7 +3638,7 @@ SynapseGuiViewVirgilio *:selected {
     background-color: rgba(143, 168, 118, 0.2); }
 
 .xfce4-panel.panel {
-  background-color: #393939;
+  background-color: rgba(64, 64, 64, 0.5);
   color: #DADADA; }
   .xfce4-panel.panel frame > border {
     border: 0; }
