Mint-Y-Dark: add transparency to rest of whisker-menu
* Be sure to set background opacity for whisker-menu in its settings
  (as it seems to be conflicting, when its set to the default 100)

* Doing so along with this commit, will give us the desired whisker-menu
look

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -3924,6 +3924,9 @@ filechooser placessidebar.sidebar list scrollbar, .nemo-window .sidebar scrollba
   border-bottom-width: 0;
   font-weight: bold; }
 
+#whiskermenu-window treeview, entry {
+  background-color: rgba(64,64,64,0.5); }
+
 window.background.lightdm menubar > menuitem {
   padding: 0 5px 0 5px; }
 
